--- a/ramenRig/createCtrl.ui
+++ b/ramenRig/createCtrl.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>283</width>
-    <height>435</height>
+    <width>254</width>
+    <height>432</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,7 +28,7 @@
            </sizepolicy>
           </property>
           <property name="placeholderText">
-           <string>Name</string>
+           <string>Name (csv)</string>
           </property>
          </widget>
         </item>
@@ -69,6 +69,19 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <widget class="Line" name="line">
@@ -318,6 +331,19 @@
          </spacer>
         </item>
        </layout>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <widget class="Line" name="line_2">
@@ -791,7 +817,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>283</width>
+     <width>254</width>
      <height>21</height>
     </rect>
    </property>
