--- a/ramenRig/createCtrl.ui
+++ b/ramenRig/createCtrl.ui
@@ -221,20 +221,23 @@
            <number>1</number>
           </property>
           <property name="value">
-           <double>1.000000000000000</double>
+           <double>4.000000000000000</double>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QSlider" name="horizontalSlider_2">
           <property name="maximum">
-           <number>100</number>
+           <number>200</number>
           </property>
           <property name="singleStep">
            <number>1</number>
           </property>
+          <property name="value">
+           <number>40</number>
+          </property>
           <property name="sliderPosition">
-           <number>10</number>
+           <number>40</number>
           </property>
           <property name="tracking">
            <bool>true</bool>
