--- a/pipelime/submitToFarmWidget.ui
+++ b/pipelime/submitToFarmWidget.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>780</width>
+    <width>656</width>
     <height>60</height>
    </rect>
   </property>
@@ -72,6 +72,39 @@
        <property name="checked">
         <bool>true</bool>
        </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line_6">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox_jobType">
+       <property name="minimumSize">
+        <size>
+         <width>70</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>100</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <item>
+        <property name="text">
+         <string>Redshift</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Playblast</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
