--- a/pipelime/submitToFarm.ui
+++ b/pipelime/submitToFarm.ui
@@ -67,6 +67,19 @@
          </widget>
         </item>
         <item>
+         <widget class="QPushButton" name="testButton2">
+          <property name="maximumSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Test2</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QPushButton" name="pushButton_settings">
           <property name="minimumSize">
            <size>
