--- a/pipelime/submitToFarmWidget.ui
+++ b/pipelime/submitToFarmWidget.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>947</width>
+    <width>965</width>
     <height>60</height>
    </rect>
   </property>
@@ -116,6 +116,11 @@
        <item>
         <property name="text">
          <string>Playblast</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Yeti Cache</string>
         </property>
        </item>
       </widget>
