--- a/pipelime/submitToFarmWidget.ui
+++ b/pipelime/submitToFarmWidget.ui
@@ -96,6 +96,9 @@
      </item>
      <item>
       <widget class="QComboBox" name="comboBox_jobType">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="minimumSize">
         <size>
          <width>70</width>
@@ -116,11 +119,6 @@
        <item>
         <property name="text">
          <string>Playblast</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Yeti Cache</string>
         </property>
        </item>
       </widget>
