--- a/pipelime/submitToFarm.ui
+++ b/pipelime/submitToFarm.ui
@@ -54,32 +54,6 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="testButton">
-          <property name="maximumSize">
-           <size>
-            <width>30</width>
-            <height>30</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Test</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="testButton2">
-          <property name="maximumSize">
-           <size>
-            <width>30</width>
-            <height>30</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Test2</string>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QPushButton" name="pushButton_settings">
           <property name="minimumSize">
            <size>
@@ -444,6 +418,32 @@ background-image: url(/icon/io_ANIMOUT.png);
                </property>
                <property name="text">
                 <string>Update Global Settings</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="testButton">
+               <property name="maximumSize">
+                <size>
+                 <width>10000</width>
+                 <height>30</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Test</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="testButton2">
+               <property name="maximumSize">
+                <size>
+                 <width>10000</width>
+                 <height>30</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Test2</string>
                </property>
               </widget>
              </item>
@@ -1270,7 +1270,7 @@ background-image: url(/icon/io_ANIMOUT.png);
 </string>
           </property>
           <property name="text">
-           <string>RENDER</string>
+           <string>SUBMIT</string>
           </property>
           <property name="autoDefault">
            <bool>false</bool>
