--- a/pipelime/submitToFarmWidget.ui
+++ b/pipelime/submitToFarmWidget.ui
@@ -113,7 +113,7 @@
        </property>
        <item>
         <property name="text">
-         <string>Redshift</string>
+         <string>Render</string>
         </property>
        </item>
        <item>
